[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "google-recaptcha-bypass"
version = "0.1.0"
description = "Helper utilities for experimenting with Google reCAPTCHA bypass techniques."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "DrissionPage",
    "pydub",
    "SpeechRecognition",
]
